# terminal_assistant

./: Cargo.toml
src/: args.rs  main.rs
src/api/: chat_completion.rs  mod.rs
src/enums/: mod.rs  model_chat_completion.rs  role_message.rs
src/structs/: message_chat_completion.rs  message_chat_response.rs  mod.rs  user_chat.rs
